<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="txv_signup">Sign up if you do not have an account</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_signup">Sign up</string>
    <string name="signup_error_message">All fields are required</string>
    <string name="error_title">Oops</string>
    <string name="mnu_lbl_logout">Logout</string>
    <string name="no_network_error_message">Network is unvailable at the moment. Please try again later</string>
    <string name="lbl_empty_inbox">No new messages</string>
    <string name="lbl_empty_friends">No new friends, add friends to begin</string>
    <string name="mnu_lbl_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="mnu_lbl_camera">Camera</string>

</resources>
