<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity" >

    <EditText
        android:id="@+id/txtSignupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/lbl_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtSignupEmail"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/lbl_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtSignupPassword"
        android:layout_below="@+id/txtSignupUsername"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/lbl_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtSignupPassword"
        android:layout_marginTop="25dp"
        android:text="@string/lbl_signup" />

</RelativeLayout>
