<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/lbl_username" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txv_signup"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="19sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/lbl_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="25dp"
        android:hint="@string/lbl_login"
        android:text="@string/lbl_login" />

    <ProgressBar
        android:id="@+id/pbrLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:visibility="invisible" />

</RelativeLayout>
